sfdx-source/force-app/main/default/objects/Provisioning_History__c/Provisioning_History__c.object-meta.xml
<CustomObject>
    <description>LEM-3273: It captures the historical log of Provisioning jobs for traceability and compliance reporting.</description>
    <label>Provisioning History</label>
    <nameField>
        <displayFormat>PH-{0}</displayFormat>
        <label>Provisioning History Name</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provisioning Histories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>