sfdx-source/force-app/main/default/objects/Provisioning_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>LEM-3273: It indicates the Account for which provisioning request is sent.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Provisioning Histories</relationshipLabel>
    <relationshipName>Provisioning_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>