sfdx-source/force-app/main/default/objects/Provisioning_History__c/fields/Business_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Id__c</fullName>
    <description>LEM-3273: It indicates the Business Id against which provisioning request is sent.</description>
    <externalId>true</externalId>
    <label>Business Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>