sfdx-source/force-app/main/default/objects/Provisioning_History__c/fields/Business_Reference__c.field-meta.xml
<CustomField>
    <fullName>Business_Reference__c</fullName>
    <description>LEM-3273: It indicates the Business Reference for which provisioning request is sent.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Reference</label>
    <referenceTo>Business_Reference__c</referenceTo>
    <relationshipLabel>Provisioning Histories</relationshipLabel>
    <relationshipName>Provisioning_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>