sfdx-source/force-app/main/default/objects/Provisioning_History__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>LEM-3273: It indicates the field which is changed by Mulesoft through provisioning request.</description>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>