sfdx-source/force-app/main/default/objects/Provisioning_History__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>LEM-3273: It indicates the new value pushed to backend system by Mulesoft from Salesforce.</description>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>