sfdx-source/force-app/main/default/objects/Provisioning_History__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>LEM-3273: It indicates the Order for which provisioning request is sent.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Provisioning Histories</relationshipLabel>
    <relationshipName>Provisioning_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>