sfdx-source/force-app/main/default/objects/Provisioning_History__c/fields/Original_Value__c.field-meta.xml
<CustomField>
    <fullName>Original_Value__c</fullName>
    <description>LEM-3273: It indicates the original value in backend system receieved by Mulesoft.</description>
    <label>Original Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>