sfdx-source/force-app/main/default/objects/Provisioning_History__c/fields/Provisioning_Table__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Table__c</fullName>
    <description>LEM-3273: It indicates the type of provisioning request.</description>
    <label>Provisioning Table</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Store Partnership</fullName>
            </value>
            <value>
                <fullName>Mx Affiliate Program</fullName>
            </value>
            <value>
                <fullName>Business Config</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>