sfdx-source/force-app/main/default/objects/Provisioning_History__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>LEM-3273: It indicates the reason for provisioning request.</description>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>