sfdx-source/force-app/main/default/objects/Provisioning_History__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>LEM-3273: It indicates the payload processed by Mulesoft for provisioning request.</description>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>