sfdx-source/force-app/main/default/objects/Provisioning_History__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>LEM-3273: It stores the response recieved from backend system by Mulesoft.</description>
    <label>Response</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>