sfdx-source/force-app/main/default/objects/Provisioning_History__c/fields/Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Store_Id__c</fullName>
    <description>LEM-3273: It indicates the Store Id for which provisioning request is sent.</description>
    <externalId>true</externalId>
    <label>Store Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>