sfdx-source/force-app/main/default/objects/Provisioning_History__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <description>LEM-3273: It indicates email of the user who initiated provisioning request.</description>
    <label>User Email</label>
    <type>Email</type>
</CustomField>