sfdx-source/force-app/main/default/objects/Provisioning_History__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <description>LEM-3273: It indicates the Work Order for which provisioning request is sent.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Provisioning Histories</relationshipLabel>
    <relationshipName>Provisioning_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>