sfdx-source/force-app/main/default/objects/Provisioning_History__c/fields/Xref__c.field-meta.xml
<CustomField>
    <fullName>Xref__c</fullName>
    <description>LEM-3273: It indicates the Xref for which provisioning request is sent.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Xref</label>
    <referenceTo>Xref__c</referenceTo>
    <relationshipLabel>Provisioning Histories</relationshipLabel>
    <relationshipName>Provisioning_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>